firstapp/test-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cpr
  namespace: argocd
spec:
  defaultBackend:
    service:
      name: service1-service
      port:
        number: 8080
  rules:
      http:
        paths:           
          - path: /getData1
            pathType: Prefix
            backend:
              service:
                name: service1-service
                port: 
                  number: 8080
          - path: /service1/getData1
            pathType: Prefix
            backend:
              service:
                name: service1-service
                port: 
                  number: 8080
          - path: /swagger-ui/index.html
            pathType: Prefix
            backend:
              service:
                name: service1-service
                port: 
                  number: 8080
  ingressClassName: nginx-internal
